--- a/styles.css
+++ b/styles.css
@@ -157,4 +157,155 @@ main{
 
 .main-tables-container{
     align-content: center;
+    position: relative;
+}
+
+.container-arrow-right{
+    height: 10px;
+    width: 12px;
+    background-image: url('assets/icons/right-arrow.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    top: 50%;
+    right: 10%;
+    cursor: pointer;
+}
+
+.container-arrow-left{
+    display: none;
+    height: 10px;
+    width: 12px;
+    background-image: url('assets/icons/left-arrow.jpeg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    top: 50%;
+    left: 10%;
+    cursor: pointer;
+}
+
+.main-currency-table{
+    width: 70%;
+    min-width: 235px;
+    max-width: 500px;
+    height: 360px;
+    margin: 0 auto;
+    font-family: "Inter", sans-serif;
+}
+
+.main-comisions-table{
+    width: 70%;
+    min-width: 235px;
+    max-width: 500px;
+    height: 360px;
+    margin: 0 auto;
+    font-family: "Inter", sans-serif;
+    display: none;
+}
+
+.main-currency-table .currency-table--title{
+    margin-bottom: 15px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    line-height: 2.3rem;
+    color: var(--bitcoin-orange);
+    text-align: left;
+}
+
+.main-comisions-table .comisions-table--title{
+    margin-bottom: 15px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    line-height: 2.3rem;
+    color: var(--secondary-blue);
+    text-align: left;
+}
+
+.currency-table--container, .comisions-table--container{
+    width: 90%;
+    min-width: 230px;
+    max-width: 300px;
+    height: 250px;
+    margin: 0 auto;
+}
+
+.currency-table--container table, .comisions-table--container table{
+    width: 100%;
+    height: 100%;
+}
+
+.currency-table--container td, .comisions-table--container td{
+    width: 50%;
+    font-size: 1.6rem;
+    font-weight: 600;
+    line-height: 1.9rem;
+    color: var(--grey);
+    background-color: var(--just-white);
+}
+
+.currency-table--container .table__top-left, .comisions-table--container .table__top-left{
+    border-radius: 15px 0 0 0;
+}
+
+.currency-table--container .table__top-right, .comisions-table--container .table__top-right{
+    border-radius: 0 15px 0 0;
+}
+
+.currency-table--container .table__bottom-left, .comisions-table--container .table__bottom-left{
+    border-radius: 0 0 0 15px;
+}
+
+.currency-table--container .table__bottom-right, .comisions-table--container .table__bottom-right{
+    border-radius: 0 0 15px 0;
+}
+
+.currency-table--container .table__right, .comisions-table--container .table__right{
+    font-size: 1.4rem;
+    font-weight: normal;
+    line-height: 1.7rem;
+    color: #757575;
+}
+
+.currency-table--container .down{
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-left: 10px;
+    background-image: url('assets/icons/trending-down.svg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.currency-table--container .stonks{
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-left: 10px;
+    background-image: url('assets/icons/trending-up.svg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.currency-uptodate, .comisions-uptodate{
+    width: 90%;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 15px;
+}
+
+.currency-uptodate p{
+    padding: 5px;
+    background-color: rgb(255, 216, 198);
+    border-radius: 5px;
+}
+
+.comisions-uptodate p{
+    padding: 5px;
+    background-color: var(--soft-blue);
+    border-radius: 5px;
 }
